hphp/hack/test/typecheck/global_const20.php.exp
File "global_const20.php", line 3, characters 11-15:
Invalid expression in constant initializer (Parsing[1002])
File "global_const20.php", line 3, characters 11-15:
Illegal constant value (Naming[2023])
