hphp/hack/test/typecheck/global_const20.php
<?hh // partial

const X = A::$x;
